# SearchEngine

./: CMakeLists.txt  TO_DO  TO_DO.txt  configuration.json
cmake/: cpr_install.cmake  mysql_connector_install.cmake  nlohmann_json_install.cmake
core/: se_domain.hpp  se_domain_behaviour.hpp  se_json.hpp  se_logable_component.hpp  se_network_component.hpp  se_service.hpp  se_service_behaviour.hpp  se_switch_board.hpp  se_work_station.hpp
core/builders/: se_builder.hpp  se_builder_imp.hpp  se_domain_builder.hpp  se_service_builder.hpp  se_ws_builder.hpp
core/messages/: json_encoding_converter.hpp  message_core.hpp
core/se_config/: se_config.hpp
core/se_config/validators/: se_cfg_validator.hpp  se_cfg_validator_imp.hpp
core/se_logger/: se_logger.hpp  se_logger_file.hpp  se_loggers_storage.hpp
engine/db_entities/: se_db_queries.hpp  se_db_responder.hpp
engine/domains/domains/se_pages_indexing_domain/: pi_config.hpp  pi_domain.hpp  pi_external_messages.hpp  pi_internal_messages.hpp  pi_queries.hpp
engine/domains/domains/se_pages_indexing_domain/services/: pi_db_responder_service.h  pi_page_dumper_service.h  pi_page_indexing_service.h
engine/domains/domains/se_searching_domain/: s_config.hpp  s_domain.hpp
engine/domains/domains/se_searching_domain/services/: s_search_service.hpp
engine/se_db_entities/: se_db_connection.hpp  se_db_queries.hpp  se_db_responder.hpp
engine/se_primary_domain/domains/se_pages_indexing_domain/: pi_config.hpp  pi_domain.hpp  pi_queries.hpp
engine/se_primary_domain/domains/se_pages_indexing_domain/messages/: pi_external_messages.hpp  pi_internal_messages.hpp
engine/se_primary_domain/domains/se_pages_indexing_domain/services/: pi_db_responder_service.h  pi_page_analyzer_service.h  pi_page_dumper_service.h  pi_page_indexing_service.h
engine/se_primary_domain/domains/se_searching_domain/: s_messages.hpp
engine/se_primary_domain/domains/se_searching_domain/services/: s_info_service.hpp
engine/se_primary_domain/messages/: p_external_messages.hpp
extensions/search_engine_analyzers/html_text_automatons/: automaton.hpp  encoding_automaton.hpp  language_automaton.hpp
extensions/search_engine_analyzers/stop_words/: stop_words_container.hpp
extensions/search_engine_analyzers/stop_words/stop_words_lists/: english.txt
extensions/search_engine_analyzers/text_property_types/: se_encoding.hpp  string_enc.hpp
extensions/search_engine_analyzers/tools/: bold_snippet_builder.hpp  html_text_analyzer.hpp  se_encoder.hpp  se_pair_extension.hpp  stemmer.hpp  url_analyzer.hpp
extensions/thread_extensions/: thread_pool.hpp
extensions/thread_extensions/thread_safe_containers/: thread_safe_container.hpp  thread_safe_queue.hpp  thread_safe_unordered_map.hpp
libs/libstemmer/: CMakeLists.txt
libs/mysql-connector/: INFO_BIN
search_engine/: configuration.h  se_component.h  se_config.hpp  se_logger_api.h  search_engine.h
search_engine/builders/: abstract_domain_builder.hpp  abstract_engine_builder.hpp  abstract_service_builder.hpp  builder.hpp
search_engine/se_domains/: se_api.h  se_db_queries.h  se_db_responder.h  se_domain.h  se_service.hpp
search_engine/se_domains/builders/: abstract_domain_builder.hpp  abstract_service_builder.hpp  builder.hpp
search_engine/se_domains/se_page_indexing_domain/: messages.h  pi_config.hpp  pi_domain.h  pi_messages.h  pi_queries.h
search_engine/se_domains/se_page_indexing_domain/services/: pi_db_responder_service.h  pi_page_analyzer_service.h  pi_page_dumper_service.h  pi_page_indexing_service.h
search_engine/se_domains/se_search_domain/: s_config.hpp  s_domain.hpp  s_messages.hpp  s_queries.hpp
search_engine/se_domains/se_search_domain/services/: s_db_responder_service.hpp  s_search_service.hpp
search_engine/se_domains/se_services_infrastructure/: json_encoding_converter.hpp  message_core.h  message_id_generator.h  se_router.hpp  se_services_communication.hpp
search_engine/se_logger/: se_logger.h  se_logger_file.h  se_loggers_storage.h
search_engine_analyzers/: CMakeLists.txt
search_engine_analyzers/converters/: converter_to_encoding_t.cpp  converter_to_language_t.cpp  converter_to_property_t.cpp
search_engine_analyzers/converters/include/: converter_to_encoding_t.h  converter_to_language_t.h  converter_to_property_t.h
search_engine_analyzers/html_text_automatons/: automaton.cpp  automaton.hpp  encoding_automaton.cpp  encoding_automaton.hpp  language_automaton.cpp  language_automaton.hpp  link_automaton.cpp  link_automaton.hpp  text_automaton.cpp  text_automaton.hpp  title_automaton.hpp
search_engine_analyzers/html_text_automatons/include/: automaton.h  encoding_automaton.h  language_automaton.h  link_automaton.h  text_automaton.h
search_engine_analyzers/libs/: CMakeLists.txt
search_engine_analyzers/libs/libstemmer/: CMakeLists.txt
search_engine_analyzers/stop_words/: stop_words_container.hpp
search_engine_analyzers/stop_words/stop_words_lists/: russian.txt
search_engine_analyzers/text_property_types/: se_encoding.hpp  se_language.hpp  se_text_property.hpp  string_enc.hpp
search_engine_analyzers/tools/: bold_snippet_builder.hpp  en_de_coder.cpp  en_de_coder.hpp  html_text_analyzer.cpp  html_text_analyzer.hpp  page_text_parser.cpp  page_text_parser.hpp  se_encoder.hpp  stemmer.cpp  stemmer.hpp  text_parser.hpp  url_analyzer.cpp  url_analyzer.hpp  word_analyzer.hpp
search_engine_analyzers/tools/include/: en_de_coder.h  html_text_analyzer.h  page_text_parser.h  stemmer.h  url_analyzer.h
src/: SearchEngine.cpp  main.cpp
thread_extensions/: CMakeLists.txt  semaphore.hpp  thread_pool.hpp
thread_extensions/thread_safe_containers/: thread_safe_container.hpp  thread_safe_queue.hpp  thread_safe_unordered_map.hpp
