cmake_minimum_required (VERSION 3.8)

file(GLOB STEMMER_SOURCES "${CMAKE_CURRENT_LIST_DIR}/src_c/*.c"
						  "${CMAKE_CURRENT_LIST_DIR}/runtime/*.c"
						  "${CMAKE_CURRENT_LIST_DIR}/libstemmer/*.c")
#[[set(STEMMER_SOURCES  
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_catalan.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_danish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_dutch.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_english.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_finnish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_french.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_german.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_indonesian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_irish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_italian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_norwegian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_porter.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_portuguese.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_spanish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_1_swedish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_2_hungarian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_ISO_8859_2_romanian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_KOI8_R_russian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_arabic.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_armenian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_basque.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_catalan.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_danish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_dutch.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_english.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_finnish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_french.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_german.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_greek.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_hindi.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_hungarian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_indonesian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_irish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_italian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_lithuanian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_nepali.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_norwegian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_porter.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_portuguese.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_romanian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_russian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_serbian.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_spanish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_swedish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_tamil.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_turkish.c
	${CMAKE_CURRENT_LIST_DIR}/src_c/stem_UTF_8_yiddish.c
	${CMAKE_CURRENT_LIST_DIR}/runtime/api.c
	${CMAKE_CURRENT_LIST_DIR}/runtime/utilities.c
	${CMAKE_CURRENT_LIST_DIR}/libstemmer/libstemmer.c
	${CMAKE_CURRENT_LIST_DIR}/libstemmer/libstemmer_utf8.c)]]

add_library(libstemmer STATIC ${STEMMER_SOURCES})